    ------------------------------    ------------------------------    --------------------
    ct_initializer::settings          ct_settings                       ct_initializer.h
    ct_initializer                    (same)                            ct_initializer.h

    compute_table::typeID             ct_typeID                         ct_entry_type.h
    compute_table::entry_item         ct_entry_item                     ct_entry_type.h
    ct_object                         ct_object                         ct_entry_type.h

    compute_table::entry_key          ct_entry_key                      ct_entry_key.h

    compute_table::entry_result       ct_entry_result                   ct_entry_result.h



Files that need updating / cleanup
------------------------------------------------------------
dd_edge.h               dd_edge.cc
defines.h
domain.h                domain.cc
encoders.h              encoders.cc
enumerator.h            enumerator.cc
forest.h                forest.cc
hash_stream.h
heap.h
impl_unique_table.h     impl_unique_table.cc
loggers.h               loggers.cc
memory.h                memory.cc
memstats.h              memstats.cc
node_headers.h          node_headers.cc
opname.h                opname.cc
opname_numer.h          opname_numer.cc
opname_satur.h          opname_satur.cc
relation_node.h         relation_node.cc
timer.h (move?)
unique_table.h          unique_table.cc
unpacked_node.h         unpacked_node.cc


In good shape
------------------------------------------------------------
compute_table.h         compute_table.cc
ct_entry_key.h          ct_entry_key.cc
ct_entry_result.h       ct_entry_result.h
ct_entry_type.h         ct_entry_type.cc

error.h                 error.cc
initializer.h           initializer.cc
io.h                    io.cc
node_storage.h          node_storage.cc
policies.h              policies.cc
variable.h              variable.cc
varorder.h              varorder.cc
